# crucible

./: README.md  pyproject.toml  pyrightconfig.json
crucible/: app.py  context.py  crucible.tcss  runner.py  suspend.py
crucible/data/: call_filters.py  node_filters.py  shadow_tree.py  suite_tree.py  text_styles.py  trace_tree.py
crucible/parser/: __init__.py  compilation.py  parser.py  suites.py  traces.py  values.py
crucible/runner/: output.py  protocol.py  runner.py
crucible/screens/: compilation_results.py  run_forge_test.py  run_test_commands.py  suite.py  test.py  tree.py
fixtures/: ChainlinkRelayerFactoryTest_deployRelayer_test_emitsRelayerDeployedEvent.txt  WithThresholdTest_exceedsThreshold_test_setRateChangeThresholds_emitsEvents.txt  big_trace.txt  failing_traces.txt  failing_traces2.txt  forge_build_error.txt  forge_build_warnings.txt  forge_build_warnings2.txt  forge_compilation_skipped.txt  forge_full_suite.txt  full.txt  sablier.txt  sablier2.txt  sablier3.txt  sablier4.txt  suite_fail1.txt  suites1.txt  suites2.txt  suites_trace.txt  test.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test2.txt  test9.txt  traces.txt  traces_small.txt
tests/: conftest.py  test_compilation.py  test_parse_results.py  test_parser.py  test_shadow_trees.py  test_suites.py  test_traces.py  test_values.py
